<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/adv_category_popup">
        <SwitchPreferenceCompat
            app:key="popup_reminder_enabled"
            app:title="@string/adv_enable_popup"
            app:summary="@string/adv_enable_popup_summary"
            app:defaultValue="true" />

        <Preference
            app:key="select_important_apps"
            app:title="@string/adv_select_apps"
            app:summary="@string/adv_select_apps_summary"
            app:dependency="popup_reminder_enabled"/>

        <SeekBarPreference
            app:key="popup_duration_seconds"
            app:title="@string/adv_popup_duration"
            app:summary="@string/adv_popup_duration_summary"
            app:defaultValue="5"
            app:min="1"
            android:max="30"
            app:showSeekBarValue="true"
            app:dependency="popup_reminder_enabled"/>

        <SwitchPreferenceCompat
            app:key="popup_skippable"
            app:title="@string/adv_popup_skippable"
            app:summary="@string/adv_popup_skippable_summary"
            app:defaultValue="true"
            app:dependency="popup_reminder_enabled"/>

        <SeekBarPreference
            app:key="popup_skip_delay_seconds"
            app:title="@string/adv_popup_skip_delay"
            app:summary="@string/adv_popup_skip_delay_summary"
            app:defaultValue="0"
            app:min="0"
            android:max="10"
            app:showSeekBarValue="true"
            app:dependency="popup_skippable"/>

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/adv_category_permissions">
        <Preference
            app:key="permission_accessibility"
            app:title="@string/adv_permission_accessibility"
            app:summary="@string/adv_permission_accessibility_summary"/>
        <Preference
            app:key="permission_overlay"
            app:title="@string/adv_permission_overlay"
            app:summary="@string/adv_permission_overlay_summary"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/adv_category_personalization">
        <SwitchPreferenceCompat
            app:key="card_alpha_unlocked"
            app:title="@string/adv_unlock_global_alpha"
            app:summary="@string/adv_unlock_global_alpha_summary"
            app:defaultValue="false" />
        <ListPreference
            app:key="app_layout_mode"
            app:title="@string/adv_nav_mode"
            app:summary="@string/adv_nav_mode_summary"
            app:entries="@array/nav_mode_entries"
            app:entryValues="@array/nav_mode_values"
            app:defaultValue="bottom" />
        <!--
            只在「导航方式 = 底部导航栏」时才显示（见 AdvancedSettingsFragment）。
            它是底部导航栏的子开关，不是独立的导航形态。
        -->
        <SwitchPreferenceCompat
            app:key="auto_hide_nav_bar"
            app:title="@string/adv_auto_hide_nav"
            app:summary="@string/adv_auto_hide_nav_summary"
            app:defaultValue="true" />
    </PreferenceCategory>
    <ListPreference
        app:key="home_layout_mode"
        app:title="@string/adv_home_layout"
        app:summary="@string/adv_home_layout_summary"
        app:entries="@array/home_layout_entries"
        app:entryValues="@array/home_layout_values"
        app:defaultValue="standard" />
    <ListPreference
        app:key="app_icon_alias"
        app:title="@string/adv_app_icon"
        app:summary="@string/adv_app_icon_summary"
        app:entries="@array/app_icon_entries"
        app:entryValues="@array/app_icon_values"
        app:defaultValue="com.errorsiayusulif.zakocountdown.MainActivity" />
    <PreferenceCategory app:title="@string/adv_category_swipe">
        <ListPreference
            app:key="swipe_left_action"
            app:title="@string/adv_swipe_left"
            app:summary="@string/adv_swipe_current"
            app:entries="@array/swipe_action_entries"
            app:entryValues="@array/swipe_action_values"
            app:defaultValue="delete" />

        <ListPreference
            app:key="swipe_right_action"
            app:title="@string/adv_swipe_right"
            app:summary="@string/adv_swipe_current"
            app:entries="@array/swipe_action_entries"
            app:entryValues="@array/swipe_action_values"
            app:defaultValue="delete" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/adv_category_network">
        <SwitchPreferenceCompat
            app:key="auto_update_enabled"
            app:title="@string/adv_auto_update"
            app:summary="@string/adv_auto_update_summary"
            app:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
