<!-- file: res/xml/deep_developer_preferences.xml -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/dev_category_logs">
        <SwitchPreferenceCompat
            app:key="log_level_is_info"
            app:title="@string/dev_log_level_info"
            app:summary="@string/dev_log_level_info_summary"/>
        <SwitchPreferenceCompat
            app:key="log_level_is_off"
            app:title="@string/dev_log_level_off"
            app:summary="@string/dev_log_level_off_summary"/>
        <SwitchPreferenceCompat
            app:key="log_persistence_enabled"
            app:title="@string/dev_log_persistence"
            app:summary="@string/dev_log_persistence_summary"
            app:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/dev_category_dev_entry">
        <SwitchPreferenceCompat
            app:key="dev_mode_entry_enabled"
            app:title="@string/dev_enable_enter_dev_mode"
            app:summary="@string/dev_enable_enter_dev_mode_summary"
            app:defaultValue="false" />

        <SwitchPreferenceCompat
            app:key="about_easter_egg_enabled"
            app:title="@string/dev_enable_about_easter_egg"
            app:summary="@string/dev_enable_about_easter_egg_summary"
            app:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/dev_category_log_system">
        <Preference
            app:key="nav_to_live_logs"
            app:title="@string/dev_nav_live_logs"
            app:summary="@string/dev_nav_live_logs_summary"/>

        <Preference
            app:key="nav_to_archived_logs"
            app:title="@string/dev_nav_archived_logs"
            app:summary="@string/dev_nav_archived_logs_summary"
            app:dependency="log_persistence_enabled"/>
    </PreferenceCategory>


</PreferenceScreen>
