<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notify_persistent_category">
        <SwitchPreferenceCompat
            app:key="persistent_notification_enabled"
            app:title="@string/notify_enable_persistent"
            app:summary="@string/notify_enable_persistent_summary"
            app:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notify_scheduled_category">
        <ListPreference
            app:key="reminder_lead_time"
            app:title="@string/notify_reminder_time"
            app:summary="@string/notify_reminder_time_summary"
            app:entries="@array/reminder_time_entries"
            app:entryValues="@array/reminder_time_values"
            app:defaultValue="1_day" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notify_permissions_category">
        <Preference
            app:key="permission_notification"
            app:title="@string/notify_permission_notification"
            app:summary="@string/notify_permission_notification_summary"/>
        <Preference
            app:key="permission_exact_alarm"
            app:title="@string/notify_permission_exact_alarm"
            app:summary="@string/notify_permission_exact_alarm_summary"/>
        <Preference
            app:key="permission_autostart"
            app:title="@string/notify_permission_autostart"
            app:summary="@string/notify_permission_autostart_summary"/>
        <Preference
            app:key="permission_battery_optimization"
            app:title="@string/notify_permission_battery"
            app:summary="@string/notify_permission_battery_summary"/>
    </PreferenceCategory>

</PreferenceScreen>
