<!-- file: res/xml/root_preferences.xml (终极版) -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="nav_to_personalization"
        app:title="@string/settings_personalization"
        app:summary="@string/settings_personalization_summary"
        app:icon="@drawable/ic_personalization"/>

    <Preference
        app:key="nav_to_language"
        app:title="@string/settings_language"
        app:summary="@string/settings_language_summary"
        app:icon="@drawable/ic_language"/>

    <Preference
        app:key="nav_to_notifications"
        app:title="@string/settings_notifications"
        app:summary="@string/settings_notifications_summary"
        app:icon="@drawable/ic_notifications"/>


    <Preference
        app:key="nav_to_permissions"
        app:title="@string/settings_permissions"
        app:summary="@string/settings_permissions_summary"
        app:icon="@drawable/ic_security"/>

    <Preference
        app:key="nav_to_backup_restore"
        app:title="@string/settings_backup"
        app:summary="@string/settings_backup_summary"
        app:icon="@drawable/ic_backup"/>

    <Preference
        app:key="nav_to_advanced"
        app:title="@string/settings_advanced"
        app:summary="@string/settings_advanced_summary"
        app:icon="@drawable/ic_advanced"/>

    <Preference
        app:key="nav_to_about"
        app:title="@string/settings_about"
        app:summary="@string/settings_about_summary"
        app:icon="@drawable/ic_info"/>

</PreferenceScreen>